Added Strapi Api and integrated to frontend

--- a/client/src/components/Categories/Categories.scss
+++ b/client/src/components/Categories/Categories.scss
@@ -47,8 +47,9 @@
         border: none;
         background-color: white;
         text-transform: uppercase;
-        font-weight: 500;
+        font-weight: 300;
         font-size: .625rem;
+        letter-spacing: 1.125px;
 
         span {
             color: white;
