--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -36,7 +36,7 @@
             align-items: center;
 
             .logo {
-                color: #CF0A0A;
+                color: #F45984;
                 font-weight: bold;
                 font-size: 24px;
             }
