--- a/client/src/components/Contact/Contact.scss
+++ b/client/src/components/Contact/Contact.scss
@@ -13,11 +13,12 @@
 
         .item {
             display: flex;
-            color: white;
+            color: #F4F9FF;
 
-            span {
+            p {
                 text-transform: uppercase;
                 font-weight: 400;
+
             }
 
             input {
@@ -27,11 +28,11 @@
                 border-radius: 5px;
                 border-bottom-right-radius: 0;
                 border-top-right-radius: 0;
-                padding: 6px 8px 6px 12px;
+                padding: 4px 8px 4px 12px;
                 outline: none;
 
                 &::placeholder {
-                    color: gray;
+                    color: #A5ABBD;
                 }
 
             }
@@ -43,9 +44,9 @@
                 border-bottom-left-radius: 0;
                 border-top-left-radius: 0;
                 font-size: .750rem;
-                padding: 2px 12px 2px 12px;
-                background-color: #181818;
-                color: white;
+                padding: 4px 12px 4px 12px;
+                background-color: #414756;
+                color: #F4F9FF;
                 cursor: pointer;
             }
 
