--- a/client/src/pages/Products/Products.scss
+++ b/client/src/pages/Products/Products.scss
@@ -14,6 +14,7 @@
             h2 {
                 font-weight: 400;
                 margin-bottom: 20px;
+                text-transform: capitalize;
             }
 
         }
@@ -23,6 +24,7 @@
 
             label {
                 margin-left: 10px;
+                text-transform: capitalize;
             }
         }
     }
