Add loading image handling in Cart Component

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,5 +1,9 @@
 .navbar {
-    height: 80px;
+    position: sticky;
+    top: 0px;
+    z-index: 999999;
+    width: 100%;
+    background-color: white;
 
     .wrapper {
         margin-top: 6px;
