--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -3,6 +3,8 @@
     width: 100vw;
     position: relative;
     overflow: hidden;
+    margin-top: 20px;
+    display: block;
 
     .container {
         width: 300vw;
