--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -5,19 +5,44 @@
     top: 80px;
     background-color: #fff;
     padding: 20px;
-    box-shadow: 4px 4px 7px -5px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 4px 4px 7px -5px rgba(0, 0, 0, 0.5);
+    // box-shadow: 4px 4px 7px -5px rgba(0, 0, 0, 0.5);
+    // -webkit-box-shadow: 4px 4px 7px -5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
 
-    h1 {
-        margin-bottom: 30px;
-        color: grey;
-        font-weight: 400;
-        font-size: 1.7rem;
+    .headingTitle {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 20px;
+
+        h1 {
+            color: rgb(24, 24, 24);
+            font-weight: 400;
+            font-size: 1.3rem;
+        }
+
+        span {
+            font-size: 0.8rem;
+            font-weight: 300;
+            color: gray;
+        }
     }
+
+    hr {
+        margin-left: -20px;
+        margin-right: -20px;
+        color: gray;
+        opacity: 0.25;
+        margin-bottom: 20px;
+    }
+
 
     .item {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         gap: 20px;
         margin-bottom: 20px;
 
@@ -35,8 +60,9 @@
             }
 
             p {
+                margin-top: 5px;
                 color: gray;
-                font-size: 0.9rem;
+                font-size: 0.8rem;
                 margin-bottom: 10px;
             }
 
@@ -59,6 +85,10 @@
         margin-bottom: 20px;
         font-weight: 500;
         font-size: 1.1rem;
+
+        .totalPrice {
+            font-weight: 600;
+        }
 
     }
 
