Added Currency Price Changer and changes in Prices UI

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -20,6 +20,10 @@
             font-size: 18px;
         }
 
+        .menu-currency {
+            cursor: pointer;
+        }
+
         .left {
             display: flex;
             align-items: center;
