--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -12,7 +12,7 @@
         justify-content: space-between;
         align-items: center;
         box-shadow: 0 4px 4px -2px rgba(0, 0, 0, .2);
-
+        position: relative;
 
         .item {
             display: flex;
@@ -33,6 +33,11 @@
         .center {
             font-size: 18px;
             letter-spacing: 2px;
+            position: absolute;
+            left: 50%;
+            right: 50%;
+            white-space: nowrap;
+
         }
 
         .right {
@@ -43,6 +48,7 @@
             .icons {
                 display: flex;
                 align-items: center;
+                justify-content: center;
                 gap: 15px;
                 color: #777;
                 cursor: pointer;
