--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -2,8 +2,8 @@
     position: sticky;
     top: 0px;
     z-index: 999999;
-    width: 100%;
     background-color: white;
+    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, .2);
 
     .wrapper {
         margin-top: 6px;
@@ -11,7 +11,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        box-shadow: 0 4px 4px -2px rgba(0, 0, 0, .2);
+        overflow: hidden;
         position: relative;
 
         .item {
@@ -21,6 +21,10 @@
         }
 
         .menu-currency {
+            cursor: pointer;
+        }
+
+        #menu-language {
             cursor: pointer;
         }
 
