--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -1,22 +1,25 @@
 .slider {
     height: calc(100vh - 80px);
-    width: 100vw;
+    width: 100%;
     position: relative;
     overflow: hidden;
     margin-top: 20px;
-    display: block;
+    border: none;
 
     .container {
         width: 300vw;
         height: 100%;
         display: flex;
         transition: all .8s ease;
+        overflow: hidden;
 
 
         img {
             width: 100vw;
             height: 100%;
+            overflow: hidden;
             object-fit: cover;
+            pointer-events: none;
         }
     }
 
@@ -26,19 +29,23 @@
         position: absolute;
         bottom: 50px;
         margin: auto;
-        gap: 25px;
+        gap: 30px;
         left: 0;
         right: 0;
 
         .icon {
             cursor: pointer;
-            width: 50px;
-            height: 50px;
-            border: 1px solid #999;
+            width: min-content;
+            height: min-content;
+            border: none;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: black;
+            color: gray;
+
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.4);
+            }
         }
     }
 }
