--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -11,6 +11,7 @@
         height: 400px;
         overflow: hidden;
         position: relative;
+        cursor: pointer;
 
         &:hover {
             .secondImg {
@@ -23,6 +24,7 @@
             height: 100%;
             object-fit: cover;
             position: absolute;
+            pointer-events: none;
         }
 
         .mainImg {
