--- a/client/src/components/List/List.scss
+++ b/client/src/components/List/List.scss
@@ -1,5 +1,7 @@
 .list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    place-items: center;
+    width: 100%;
+    gap: 30px
 }
