--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -4,6 +4,7 @@
     z-index: 999999;
     background-color: white;
     box-shadow: 0 4px 4px -2px rgba(0, 0, 0, .2);
+    width: 100%;
 
     .wrapper {
         margin-top: 6px;
