Changed fav.ico and modify some styles and refractor codes

--- a/client/src/components/FeaturedProducts/FeaturedProducts.scss
+++ b/client/src/components/FeaturedProducts/FeaturedProducts.scss
@@ -16,6 +16,7 @@
             flex: 3;
             color: gray;
             font-size: 0.9rem;
+            line-height: 1.5;
         }
     }
 
@@ -36,7 +37,7 @@
 }
 
 .slick-slide {
-    margin-top: 40px;
+    margin-top: 3em;
 }
 
 
