--- a/client/src/components/List/List.scss
+++ b/client/src/components/List/List.scss
@@ -3,5 +3,6 @@
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     place-items: center;
     width: 100%;
-    gap: 30px
+    gap: 30px;
+    justify-content: space-between;
 }
