--- a/client/src/pages/Products/Products.scss
+++ b/client/src/pages/Products/Products.scss
@@ -37,6 +37,10 @@
             height: 300px;
             object-fit: cover;
             margin-bottom: 50px;
+
+            @media (max-height: 760px) {
+                height: 200px;
+            }
         }
     }
 }
