--- a/client/src/components/List/List.scss
+++ b/client/src/components/List/List.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 
     img {
         width: 120px;
