--- a/client/src/pages/Products/Products.scss
+++ b/client/src/pages/Products/Products.scss
@@ -36,11 +36,21 @@
             width: 100%;
             height: 300px;
             object-fit: cover;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
 
             @media (max-height: 760px) {
                 height: 200px;
             }
+        }
+
+        .top-pagination {
+            float: right;
+            margin-bottom: 25px;
+        }
+
+        .bottom-pagination {
+            display: flex;
+            justify-content: center;
         }
     }
 }
