--- a/client/src/pages/SearchPage/SearchPage.scss
+++ b/client/src/pages/SearchPage/SearchPage.scss
@@ -38,7 +38,7 @@
             justify-content: space-between;
             margin-bottom: 50px;
 
-            .result-tip {
+            .result-text {
                 display: flex;
                 align-items: center;
                 gap: 10px;
@@ -48,6 +48,13 @@
                     font-weight: 800;
                 }
             }
+        }
+
+        .bottom {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
