--- a/client/src/components/Favorites/Favorites.scss
+++ b/client/src/components/Favorites/Favorites.scss
@@ -1,12 +1,10 @@
-.cart {
+.favorites {
     position: absolute;
     z-index: 999;
     right: 20px;
     top: 80px;
     background-color: #fff;
     padding: 20px;
-    // box-shadow: 4px 4px 7px -5px rgba(0, 0, 0, 0.5);
-    // -webkit-box-shadow: 4px 4px 7px -5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 4px 7px 3px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -30,8 +28,8 @@
             color: gray;
 
         }
-
     }
+
 
     hr {
         margin-left: -20px;
@@ -41,6 +39,12 @@
         margin-bottom: 20px;
     }
 
+    .reset {
+        color: rgba(255, 0, 0, 0.5);
+        font-size: 0.675rem;
+        font-weight: 500;
+        cursor: pointer;
+    }
 
     .item {
         display: flex;
@@ -50,10 +54,16 @@
         margin-bottom: 20px;
 
         img {
-            width: 80px;
-            height: 100px;
+            width: 60px;
+            height: 70px;
             object-fit: cover;
             cursor: pointer;
+        }
+
+        .price {
+            color: #F45984;
+            font-size: 1rem;
+            font-weight: bold;
         }
 
         .details {
@@ -80,12 +90,6 @@
 
             }
 
-            .price {
-                color: #2879fe;
-                font-size: 1rem;
-                font-weight: 500;
-            }
-
             .quantity {
                 display: flex;
                 gap: 10px;
@@ -97,76 +101,27 @@
                     cursor: pointer;
                 }
             }
-        }
 
-        .delete {
-            color: rgba(255, 0, 0, 0.7);
-            cursor: pointer;
-        }
-    }
+            .remove {
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                width: max-content;
+                border: none;
+                color: #2879fe;
+                font-size: 0.7rem;
+                cursor: pointer;
 
-    .total {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-        font-weight: 500;
-        font-size: 1.1rem;
+                .icon {
+                    height: 20px;
+                }
 
-        .totalPrice {
-            font-weight: 600;
-        }
-
-    }
-
-    .checkout {
-        display: flex;
-        flex-direction: column;
-
-        button {
-            width: 250px;
-            background-color: #2879fe;
-            border: none;
-            color: white;
-            padding: 8px;
-            font-size: 0.9rem;
-            cursor: pointer;
-            font-weight: 500;
-            margin-bottom: 30px;
-        }
-
-        .reset {
-            color: rgba(255, 0, 0, 0.5);
-            font-size: 0.675rem;
-            font-weight: 500;
-            cursor: pointer;
+            }
         }
     }
 }
 
-.item-container {
-    max-height: 370px;
-    overflow: auto;
-
-    @media (max-height: 760px) {
-        max-height: 240px;
-    }
-
-    &::-webkit-scrollbar-track {
-        display: none;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        display: none;
-    }
-
-    &::-webkit-scrollbar-button {}
-
-    &::-webkit-scrollbar {
-        width: 0;
-    }
-}
-
-.empty-cart {
+.empty-wishlist {
     display: flex;
     flex-direction: column;
     align-items: center;
